Fix log tree creation, suppress some code